feat: commit codes

--- a/demo/.npmrc
+++ b/demo/.npmrc
@@ -3,7 +3,26 @@
 # hoist-pattern[]=!"**/@dcloudio/**"
 # hoist-pattern[]=!"**/*vue*/**"
 # hoist-pattern[]=!@tarojs*
+# public-hoist-pattern[]=!"**/@dcloudio*"
 public-hoist-pattern[]=!"@dcloudio/*"
-public-hoist-pattern[]=!"**/*vue*/**"
+public-hoist-pattern[]=!"vue/*"
+public-hoist-pattern[]=!"vue-loader"
+public-hoist-pattern[]=!"vue-template-compiler/*"
+
+# public-hoist-pattern[]=!"*@tarojs*"
 public-hoist-pattern[]=!"@tarojs/*"
+public-hoist-pattern[]=!"*-loader"
+public-hoist-pattern[]=!"*webpack*"
+public-hoist-pattern[]=!"*plugin*"
+public-hoist-pattern[]=!"@swc*"
+      # "**/react",
+      # "**/@dcloudio/**",
+      # "**/postcss",
+      # "**/vue",
+      # "**/@vue/**",
+      # "*-loader/**",
+      # "**/webpack",
+      # "**/tailwindcss",
+      # "**/typescript",
+      # "**/*-webpack-plugin"
 public-hoist-pattern[]="*"
