--- a/demo/packages/components/package.json
+++ b/demo/packages/components/package.json
@@ -27,17 +27,17 @@
   },
   "license": "ISC",
   "optionalDependencies": {
-    "@tarojs/components": "^3.5.7",
+    "@tarojs/components": "^3.6.6",
     "react": "^17.0.0 || ^18.0.0",
-    "vue": "^2.0.0 || ^3.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.12.4"
+    "vue": "^3.3.4",
+    "weapp-tailwindcss-webpack-plugin": "^2.3.4"
   },
   "peerDependencies": {
     "miniprogram-automator": "latest"
   },
   "devDependencies": {
-    "@jest/globals": "^29.3.1",
-    "jest": "^29.3.1",
+    "@jest/globals": "^29.5.0",
+    "jest": "^29.5.0",
     "miniprogram-automator": "latest"
   },
   "bugs": {
