--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -70,6 +70,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "less": "^4.1.3",
     "postcss": "^8.4.23",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "postcss-rpx-transform": "^1.0.1",
