chore: add ES2021 lib for rollup build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
       "src",
       "test"
     ],
+    "lib": [
+      "ES2021"
+    ],
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
