--- a/website/package.json
+++ b/website/package.json
@@ -25,9 +25,11 @@
     "fabric": "^5.3.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "file-saver": "^2.0.5"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "@docusaurus/module-type-aliases": "2.4.1",
     "@docusaurus/types": "^2.4.1",
     "@icebreakers/deploy": "^0.1.4",
