--- a/demo/packages/components/package.json
+++ b/demo/packages/components/package.json
@@ -6,7 +6,8 @@
   "types": "index.d.ts",
   "scripts": {
     "ls:pack": "npm pack --dry-run",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "vitest run"
   },
   "keywords": [
     "weapp",
@@ -32,14 +33,8 @@
     "vue": "^3.3.4",
     "weapp-tailwindcss-webpack-plugin": "^2.3.4"
   },
-  "peerDependencies": {
-    "miniprogram-automator": "latest"
-  },
-  "devDependencies": {
-    "@jest/globals": "^29.5.0",
-    "jest": "^29.5.0",
-    "miniprogram-automator": "latest"
-  },
+  "peerDependencies": {},
+  "devDependencies": {},
   "bugs": {
     "url": "https://github.com/sonofmagic/weapp-tailwindcss-webpack-plugin/issues"
   },
