--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jest-u": "jest -u",
     "vitest:test": "vitest",
     "vitest:coverage": "vitest run --coverage",
+    "e2e": "vitest run -c ./vitest.e2e.config.ts",
     "test:all": "cross-env JEST_INVALID_SKIP_CASES=1 jest",
     "init:rename": "node scripts/init/rename.js",
     "clean": "node scripts/clean.js",
@@ -64,7 +65,6 @@
     "demo:dev": "node scripts/demo/dev.js",
     "demo:build": "node scripts/demo/build.js",
     "demo:build:local": "node scripts/demo/build.js --local",
-    "demo:e2e": "ts-node scripts/demo/e2e.js",
     "demo:link": "node scripts/demo/link.js",
     "demo:install": "node scripts/demo/install.js",
     "demo:install:beta": "node scripts/demo/install.js --beta",
