--- a/website/package.json
+++ b/website/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start",
-    "dev": "docusaurus start",
+    "start": "cross-env TYPEDOC_WATCH=true docusaurus start",
+    "dev": "cross-env TYPEDOC_WATCH=true docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy:github": "cross-env PROVIDER=GITHUB docusaurus deploy",
