--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -9,6 +9,7 @@ on:
       - 'website/docusaurus.config.js'
       - 'website/sidebars.js'
   workflow_dispatch:
+# https://docusaurus.io/docs/deployment#deploying-to-github-pages
 
 jobs:
   deploy:
@@ -32,11 +33,50 @@ jobs:
       - name: Install Website dependencies
         working-directory: ./website
         run: pnpm i
-      - name: Set git user email and name
-        run: |
-          git config --global user.email "qq1324318532@gmail.com"
-          git config --global user.name "icebreaker-bot"
-      - name: Build website and Deploy to GitHub Pages
-        working-directory: ./website
-        # Error: Please set the GIT_USER environment variable, or explicitly specify USE_SSH instead!
-        run: GIT_USER=sonofmagic pnpm run deploy:github
+      - name: Build website
+        run: pnpm build
+      # Popular action to deploy to GitHub Pages:
+      # Docs: https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          # Build output to publish to the `gh-pages` branch:
+          publish_dir: ./build
+          # The following lines assign commit authorship to the official
+          # GH-Actions bot for deploys to `gh-pages` branch:
+          # https://github.com/actions/checkout/issues/13#issuecomment-724415212
+          # The GH actions bot is used by default if you didn't specify the two fields.
+          # You can swap them out with your own user credentials.
+          user_name: github-actions[bot]
+          user_email: 41898282+github-actions[bot]@users.noreply.github.com
+# jobs:
+#   deploy:
+#     name: Deploy to GitHub Pages
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3
+#         with:
+#           fetch-depth: 0
+#       - name: Install pnpm
+#         uses: pnpm/action-setup@v2
+#       - uses: actions/setup-node@v3
+#         with:
+#           node-version: 18
+#           cache: pnpm
+#           cache-dependency-path: |
+#             pnpm-lock.yaml
+#             website/pnpm-lock.yaml
+#       - name: Install Root dependencies
+#         run: pnpm i
+#       - name: Install Website dependencies
+#         working-directory: ./website
+#         run: pnpm i
+#       - name: Set git user email and name
+#         run: |
+#           git config --global user.email "qq1324318532@gmail.com"
+#           git config --global user.name "icebreaker-bot"
+#       - name: Build website and Deploy to GitHub Pages
+#         working-directory: ./website
+#         # Error: Please set the GIT_USER environment variable, or explicitly specify USE_SSH instead!
+#         run: GIT_USER=sonofmagic pnpm run deploy:github
