--- a/package.json
+++ b/package.json
@@ -158,16 +158,16 @@
     "@types/vinyl": "^2.0.7",
     "@types/webpack": "^5.28.1",
     "@types/webpack-sources": "^3.2.0",
-    "@vitest/coverage-c8": "^0.31.4",
+    "@vitest/coverage-v8": "^0.32.0",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.2",
-    "bumpp": "^9.1.0",
+    "bumpp": "^9.1.1",
     "chalk": "4.1.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
     "defu": "6.1.2",
     "del": "^6.1.1",
-    "eslint": "8.41.0",
+    "eslint": "8.42.0",
     "eslint-config-icebreaker": "^1.1.0",
     "execa": "5",
     "fast-glob": "^3.2.12",
@@ -177,7 +177,7 @@
     "html-loader": "^4.2.0",
     "jest": "^29.5.0",
     "lodash": "^4.17.21",
-    "memfs": "^3.5.1",
+    "memfs": "^3.5.2",
     "mini-css-extract-plugin": "^2.7.6",
     "miniprogram-automator": "^0.12.0",
     "pkg-types": "^1.0.3",
@@ -185,7 +185,7 @@
     "postcss-loader": "^7.3.2",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "prettier": "^2.8.8",
-    "rollup": "^3.23.0",
+    "rollup": "^3.24.0",
     "rollup-plugin-visualizer": "^5.9.0",
     "simple-functional-loader": "^1.2.1",
     "style-loader": "^3.3.3",
@@ -195,15 +195,15 @@
     "ts-node": "^10.9.1",
     "ts-patch": "^2.1.0",
     "tsd": "^0.28.1",
-    "tslib": "^2.5.2",
+    "tslib": "^2.5.3",
     "ttypescript": "^1.5.15",
     "typescript": "^4.9.5",
     "typescript-transform-paths": "^3.4.6",
     "vinyl": "^3.0.0",
     "vite": "^4.3.9",
-    "vitest": "^0.31.4",
+    "vitest": "^0.32.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "webpack": "^5.85.0"
+    "webpack": "^5.86.0"
   },
   "dependencies": {
     "@babel/generator": "^7.21.4",
@@ -215,8 +215,8 @@
     "postcss": "8.4.24",
     "postcss-selector-parser": "^6.0.13",
     "semver": "^7.5.1",
-    "tailwindcss-mangle-shared": "^1.2.1",
-    "tailwindcss-patch": "^1.2.1"
+    "tailwindcss-mangle-shared": "^1.2.4",
+    "tailwindcss-patch": "^1.2.4"
   },
   "packageManager": "pnpm@8.5.1"
 }
