--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "dts": "tsc --emitDeclarationOnly -p tsconfig.dts.json",
     "test": "jest && vitest run",
     "jest-u": "jest -u",
-    "vitest:test": "vitest",
+    "test:dev": "vitest",
     "vitest:coverage": "vitest run --coverage",
     "e2e": "vitest run -c ./vitest.e2e.config.ts",
     "e2e:dev": "vitest -c ./vitest.e2e.config.ts",
@@ -139,7 +139,7 @@
     "@icebreakers/cli": "^0.1.1",
     "@icebreakers/readme": "0.1.0",
     "@rollup/plugin-alias": "^5.0.0",
-    "@rollup/plugin-commonjs": "^25.0.0",
+    "@rollup/plugin-commonjs": "^25.0.1",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-terser": "^0.4.3",
@@ -153,7 +153,7 @@
     "@types/jest": "^29.5.2",
     "@types/lodash": "^4.14.195",
     "@types/micromatch": "^4.0.2",
-    "@types/node": "^20.2.5",
+    "@types/node": "^20.2.6",
     "@types/semver": "^7.5.0",
     "@types/vinyl": "^2.0.7",
     "@types/webpack": "^5.28.1",
@@ -179,15 +179,15 @@
     "html-loader": "^4.2.0",
     "jest": "^29.5.0",
     "lodash": "^4.17.21",
-    "memfs": "^3.5.2",
+    "memfs": "^3.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "miniprogram-automator": "^0.12.0",
     "pkg-types": "^1.0.3",
     "postcss-load-config": "^4.0.1",
-    "postcss-loader": "^7.3.2",
+    "postcss-loader": "^7.3.3",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "prettier": "^2.8.8",
-    "rollup": "^3.24.0",
+    "rollup": "^3.24.1",
     "rollup-plugin-visualizer": "^5.9.0",
     "simple-functional-loader": "^1.2.1",
     "style-loader": "^3.3.3",
