--- a/website/package.json
+++ b/website/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "cross-env TYPEDOC_WATCH=true docusaurus start",
-    "dev": "cross-env TYPEDOC_WATCH=true docusaurus start",
+    "start": "cross-env TYPEDOC_WATCH=true docusaurus start --port 4000",
+    "dev": "npm run start",
     "build": "docusaurus build",
     "build:github": "cross-env PROVIDER=GITHUB docusaurus build",
     "swizzle": "docusaurus swizzle",
@@ -21,9 +21,7 @@
     "@docusaurus/core": "2.4.1",
     "@docusaurus/preset-classic": "2.4.1",
     "@mdx-js/react": "^1.6.22",
-    "canvas": "^2.11.2",
     "clsx": "^1.2.1",
-    "fabric": "^5.3.0",
     "file-saver": "^2.0.5",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
@@ -34,7 +32,6 @@
     "@docusaurus/types": "^2.4.1",
     "@icebreakers/deploy": "^0.1.4",
     "@tsconfig/docusaurus": "^1.0.5",
-    "@types/fabric": "^5.3.2",
     "@types/file-saver": "^2.0.5",
     "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
