--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -84,7 +84,8 @@
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^2.4.3",
-    "webpack": "^5.86.0"
+    "webpack": "^5.86.0",
+    "webpack-chain": "^6.5.1"
   },
   "engines": {
     "node": ">=12.0.0"
