--- a/package.json
+++ b/package.json
@@ -180,7 +180,6 @@
     "html-loader": "^4.2.0",
     "jest": "^29.5.0",
     "lodash": "^4.17.21",
-    "memfs": "^3.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "miniprogram-automator": "^0.12.0",
     "pkg-types": "^1.0.3",
@@ -205,7 +204,8 @@
     "vite": "^4.3.9",
     "vitest": "^0.32.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "webpack": "^5.86.0"
+    "webpack": "^5.86.0",
+    "webpack-build-utils": "^0.0.1"
   },
   "dependencies": {
     "@babel/generator": "^7.21.4",
