--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -53,12 +53,12 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-3080420230531001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-3080420230531001",
     "clipboard": "^2.0.11",
-    "dayjs": "^1.11.7",
+    "dayjs": "^1.11.8",
     "eventemitter3": "^4.0.7",
     "miniprogram-computed": "^4.4.0",
     "p-queue": "6.6.2",
-    "uview-plus": "^3.1.29",
-    "vk-uview-ui": "^1.4.4",
+    "uview-plus": "^3.1.32",
+    "vk-uview-ui": "^1.4.8",
     "vue": "^3.2.45",
     "vue-i18n": "^9.1.9",
     "vuex": "^4.1.0"
@@ -70,23 +70,19 @@
     "@dcloudio/uni-stacktracey": "3.0.0-3080420230531001",
     "@dcloudio/vite-plugin-uni": "3.0.0-3080420230531001",
     "autoprefixer": "^10.4.14",
-    "miniprogram-api-typings": "^3.9.0",
-    "postcss": "^8.4.21",
+    "miniprogram-api-typings": "^3.10.0",
+    "postcss": "^8.4.24",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "postcss-rpx-transform": "^1.0.1",
-    "postcss-windicss": "^1.0.0",
-    "sass": "^1.59.3",
+    "sass": "^1.63.4",
     "tailwind-css-variables-theme-generator": "^0.3.8",
-    "tailwindcss": "^3.3.1",
-    "tailwindcss-patch": "^1.2.4",
+    "tailwindcss": "^3.3.2",
+    "tailwindcss-patch": "^1.2.5",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~4.9.5",
-    "unocss": "^0.50.5",
     "vite": "4.1.4",
-    "vite-plugin-windicss": "^1.8.10",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.4.3",
-    "windicss": "^3.5.6"
+    "weapp-tailwindcss-webpack-plugin": "^2.4.4"
   }
 }
