chore(deps): upgrade major ts-patch and typescript version

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,7 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "rootDir": "src",
-    "removeComments": true
+    "removeComments": true,
+    "sourceMap": false
   },
   "include": ["src/**/*", "types/**/*"],
   "exclude": ["dist", "node_modules", "test/types", "./*.d.ts"]
