--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "format:test": "prettier --check \"test/**/*.test.{ts,js}\" -w",
     "ls:pack": "npm pack --dry-run",
     "cli:patch": "node bin/weapp-tailwindcss.js patch",
-    "prepare": "ts-patch install -s & tw-patch",
+    "prepare": "ts-patch install -s",
     "release": "bumpp",
     "-------": "-----------",
     "postinstall": "node bin/weapp-tailwindcss.js patch"
@@ -151,6 +151,7 @@
     "@types/gulp": "^4.0.11",
     "@types/gulp-postcss": "^8.0.3",
     "@types/jest": "^29.5.2",
+    "@types/klaw": "^3.0.3",
     "@types/lodash": "^4.14.195",
     "@types/micromatch": "^4.0.2",
     "@types/node": "^20.3.1",
@@ -178,6 +179,7 @@
     "gulp-postcss": "^9.0.1",
     "html-loader": "^4.2.0",
     "jest": "^29.5.0",
+    "klaw": "^4.1.0",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.7.6",
     "miniprogram-automator": "^0.12.0",
@@ -193,11 +195,10 @@
     "tailwindcss": "^3.3.2",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "ts-patch": "^2.1.0",
+    "ts-patch": "^3.0.0",
     "tsd": "^0.28.1",
     "tslib": "^2.5.3",
-    "ttypescript": "^1.5.15",
-    "typescript": "^4.9.5",
+    "typescript": "^5.1.3",
     "typescript-transform-paths": "^3.4.6",
     "vinyl": "^3.0.0",
     "vite": "^4.3.9",
@@ -219,5 +220,5 @@
     "tailwindcss-mangle-shared": "^1.2.5",
     "tailwindcss-patch": "^1.2.5"
   },
-  "packageManager": "pnpm@8.6.1"
+  "packageManager": "pnpm@8.6.2"
 }
