--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,20 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "command": "yarn dev",
+      "name": "[Demo] taro app run weapp dev",
+      "request": "launch",
+      "type": "node-terminal",
+      "cwd": "${workspaceFolder}/demo/taro-app"
+    },
+    {
+      "command": "yarn dev:local",
+      "name": "[Demo] local taro app run weapp dev",
+      "request": "launch",
+      "type": "node-terminal",
+      "cwd": "${workspaceFolder}/demo/taro-app"
+    },
+    {
       "name": "Debug Jest Tests",
       "type": "node",
       "request": "launch",
