--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "@types/gulp-postcss": "^8.0.3",
     "@types/jest": "^29.5.2",
     "@types/klaw": "^3.0.3",
+    "@types/loader-runner": "^2.2.4",
     "@types/lodash": "^4.14.195",
     "@types/micromatch": "^4.0.2",
     "@types/node": "^20.3.1",
@@ -180,6 +181,7 @@
     "html-loader": "^4.2.0",
     "jest": "^29.5.0",
     "klaw": "^4.1.0",
+    "loader-runner": "^4.3.0",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.7.6",
     "miniprogram-automator": "^0.12.0",
