--- a/package.json
+++ b/package.json
@@ -215,6 +215,7 @@
     "@babel/traverse": "^7.21.4",
     "@babel/types": "^7.21.4",
     "@csstools/postcss-is-pseudo-class": "^3.2.1",
+    "create-functional-loader": "^0.1.0",
     "micromatch": "^4.0.5",
     "postcss": "8.4.24",
     "postcss-selector-parser": "^6.0.13",
