--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "2.5.1",
+  "version": "2.5.2-beta.0",
   "description": "把tailwindcss jit引擎，带给小程序开发者们\nbring tailwindcss jit engine to our miniprogram developers!",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -182,6 +182,7 @@
     "jest": "^29.5.0",
     "klaw": "^4.1.0",
     "lodash": "^4.17.21",
+    "magic-string": "^0.30.0",
     "mini-css-extract-plugin": "^2.7.6",
     "miniprogram-automator": "^0.12.0",
     "pkg-types": "^1.0.3",
@@ -207,8 +208,7 @@
     "vitest": "^0.32.2",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.87.0",
-    "webpack-build-utils": "^0.0.4",
-    "magic-string": "^0.30.0"
+    "webpack-build-utils": "^0.0.4"
   },
   "dependencies": {
     "@babel/generator": "^7.21.4",
