--- a/demo/uni-app-webpack5/package.json
+++ b/demo/uni-app-webpack5/package.json
@@ -53,26 +53,26 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/uni-app-plus": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/uni-h5": "2.0.2-alpha-3080420230602001",
+    "@dcloudio/uni-app": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/uni-app-plus": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/uni-h5": "2.0.2-alpha-3080520230616001",
     "@dcloudio/uni-helper-json": "*",
-    "@dcloudio/uni-i18n": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/uni-mp-360": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/uni-mp-alipay": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/uni-mp-baidu": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/uni-mp-jd": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/uni-mp-kuaishou": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/uni-mp-lark": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/uni-mp-qq": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/uni-mp-toutiao": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/uni-mp-vue": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/uni-mp-weixin": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/uni-mp-xhs": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/uni-quickapp-native": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/uni-quickapp-webview": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/uni-stacktracey": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/uni-stat": "2.0.2-alpha-3080420230602001",
+    "@dcloudio/uni-i18n": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/uni-mp-360": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/uni-mp-alipay": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/uni-mp-baidu": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/uni-mp-jd": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/uni-mp-kuaishou": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/uni-mp-lark": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/uni-mp-qq": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/uni-mp-toutiao": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/uni-mp-vue": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/uni-mp-weixin": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/uni-mp-xhs": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/uni-quickapp-native": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/uni-quickapp-webview": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/uni-stacktracey": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/uni-stat": "2.0.2-alpha-3080520230616001",
     "@vue/shared": "^3.0.0",
     "core-js": "^3.29.1",
     "flyio": "^0.6.2",
@@ -86,16 +86,16 @@
     "@babel/plugin-syntax-typescript": "^7.2.0",
     "@babel/runtime": "~7.21.0",
     "@dcloudio/types": "^3.2.11",
-    "@dcloudio/uni-automator": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/uni-cli-i18n": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/uni-cli-shared": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/uni-migration": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/uni-template-compiler": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/vue-cli-plugin-uni": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/webpack-uni-mp-loader": "2.0.2-alpha-3080420230602001",
-    "@dcloudio/webpack-uni-pages-loader": "2.0.2-alpha-3080420230602001",
+    "@dcloudio/uni-automator": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/uni-cli-i18n": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/uni-cli-shared": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/uni-migration": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/uni-template-compiler": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/vue-cli-plugin-uni": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/webpack-uni-mp-loader": "2.0.2-alpha-3080520230616001",
+    "@dcloudio/webpack-uni-pages-loader": "2.0.2-alpha-3080520230616001",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.0",
@@ -118,7 +118,7 @@
     "vue-template-compiler": ">= 2.6.14 < 2.7",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.5.1"
+    "weapp-tailwindcss-webpack-plugin": "^2.5.2-beta.0"
   },
   "browserslist": [
     "Android >= 4.4",
