--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -78,7 +78,7 @@
     "vue-loader": "^17.2.2",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.5.1",
+    "weapp-tailwindcss-webpack-plugin": "^2.5.2-beta.0",
     "webpack": "^5.86.0"
   }
 }
