--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "2.5.2-beta.0",
+  "version": "2.5.2-beta.1",
   "description": "把tailwindcss jit引擎，带给小程序开发者们\nbring tailwindcss jit engine to our miniprogram developers!",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -153,6 +153,7 @@
     "@types/gulp-postcss": "^8.0.3",
     "@types/jest": "^29.5.2",
     "@types/klaw": "^3.0.3",
+    "@types/loader-utils": "^2.0.3",
     "@types/lodash": "^4.14.195",
     "@types/micromatch": "^4.0.2",
     "@types/node": "^20.3.1",
@@ -216,7 +217,7 @@
     "@babel/traverse": "^7.21.4",
     "@babel/types": "^7.21.4",
     "@csstools/postcss-is-pseudo-class": "^3.2.1",
-    "create-functional-loader": "^0.1.0",
+    "loader-utils": "^2.0.3",
     "micromatch": "^4.0.5",
     "postcss": "8.4.24",
     "postcss-selector-parser": "^6.0.13",
