--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -68,6 +68,6 @@
     "typescript": "^5.0.4",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.5.2"
+    "weapp-tailwindcss-webpack-plugin": "^2.6.0-beta.0"
   }
 }
