--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -84,7 +84,7 @@
     "typescript": "~5.1.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.5.2",
+    "weapp-tailwindcss-webpack-plugin": "^2.6.0-beta.0",
     "webpack": "^5.86.0",
     "webpack-chain": "^6.5.1"
   },
