--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -118,7 +118,7 @@
     "vue-template-compiler": "^2.6.11",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.5.2"
+    "weapp-tailwindcss-webpack-plugin": "^2.6.0-beta.0"
   },
   "browserslist": [
     "Android >= 4.4",
