--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -59,7 +59,7 @@
     "vue-template-compiler": "^2.6.14",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.6.0-beta.0",
+    "weapp-tailwindcss-webpack-plugin": "^2.6.0",
     "webpack": "^5.86.0"
   },
   "browserslist": "ios >= 8, chrome >= 47"
