--- a/package.json
+++ b/package.json
@@ -171,7 +171,7 @@
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.3",
     "bumpp": "^9.1.1",
-    "chalk": "4.1.2",
+    "colorette": "^2.0.20",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
     "defu": "6.1.2",
