fix: direct import from lib

--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
   "typesVersions": {
     "*": {
       "*": [
-        "./dist/*"
+        "./dist/*",
+        "./dist/index.d.ts"
       ]
     }
   },
