--- a/package.json
+++ b/package.json
@@ -176,12 +176,11 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
     "defu": "6.1.2",
-    "del": "^6.1.1",
+    "del": "^7.0.0",
     "eslint": "8.45.0",
     "eslint-config-icebreaker": "^1.2.2",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "execa": "5",
     "fast-glob": "^3.3.1",
     "fs-extra": "^11.1.1",
     "gulp": "^4.0.2",
@@ -224,6 +223,8 @@
     "@babel/traverse": "^7.22.8",
     "@babel/types": "^7.22.5",
     "@csstools/postcss-is-pseudo-class": "^4.0.0",
+    "@weapp-core/escape": "^1.0.0",
+    "@weapp-core/regex": "^1.0.0",
     "loader-utils": "^2.0.3",
     "micromatch": "^4.0.5",
     "postcss": "8.4.27",
