--- a/package.json
+++ b/package.json
@@ -159,16 +159,17 @@
     "@types/gulp": "^4.0.13",
     "@types/gulp-postcss": "^8.0.3",
     "@types/jest": "^29.5.3",
+    "@types/js-beautify": "^1.14.0",
     "@types/klaw": "^3.0.3",
     "@types/loader-utils": "^2.0.3",
     "@types/lodash": "^4.14.196",
     "@types/micromatch": "^4.0.2",
-    "@types/node": "^20.4.5",
+    "@types/node": "^20.4.8",
     "@types/semver": "^7.5.0",
     "@types/vinyl": "^2.0.7",
     "@types/webpack": "^5.28.1",
     "@types/webpack-sources": "^3.2.0",
-    "@vitest/coverage-v8": "^0.33.0",
+    "@vitest/coverage-v8": "^0.34.1",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.3",
     "bumpp": "^9.1.1",
@@ -177,28 +178,29 @@
     "css-loader": "^6.8.1",
     "defu": "6.1.2",
     "del": "^7.0.0",
-    "eslint": "8.45.0",
+    "eslint": "8.46.0",
     "eslint-config-icebreaker": "^1.2.2",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "fast-glob": "^3.3.1",
     "fs-extra": "^11.1.1",
     "gulp": "^4.0.2",
     "gulp-postcss": "^9.0.1",
     "html-loader": "^4.2.0",
-    "jest": "^29.6.1",
+    "jest": "^29.6.2",
+    "js-beautify": "^1.14.9",
     "klaw": "^4.1.0",
     "lodash": "^4.17.21",
-    "magic-string": "^0.30.1",
+    "magic-string": "^0.30.2",
     "mini-css-extract-plugin": "^2.7.6",
     "miniprogram-automator": "^0.12.0",
     "pkg-types": "^1.0.3",
     "postcss-load-config": "^4.0.1",
     "postcss-loader": "^7.3.3",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.1",
     "promisify-loader-runner": "^1.0.0",
-    "rollup": "^3.26.3",
+    "rollup": "^3.27.2",
     "rollup-plugin-visualizer": "^5.9.2",
     "style-loader": "^3.3.3",
     "tailwind-children": "^0.5.0",
@@ -211,8 +213,8 @@
     "typescript": "^5.1.6",
     "typescript-transform-paths": "^3.4.6",
     "vinyl": "^3.0.0",
-    "vite": "^4.4.7",
-    "vitest": "^0.33.0",
+    "vite": "^4.4.8",
+    "vitest": "^0.34.1",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.88.2",
     "webpack-build-utils": "^0.0.4"
