--- a/package.json
+++ b/package.json
@@ -144,7 +144,7 @@
   "homepage": "https://weapp-tw.icebreaker.top",
   "devDependencies": {
     "@babel/core": "^7.22.10",
-    "@icebreakers/cli": "^0.1.1",
+    "@icebreakers/cli": "0.1.1",
     "@icebreakers/readme": "0.1.0",
     "@rollup/plugin-alias": "^5.0.0",
     "@rollup/plugin-commonjs": "^25.0.3",
