--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "2.6.3",
+  "version": "2.7.0",
   "description": "把tailwindcss jit引擎，带给小程序开发者们\nbring tailwindcss jit engine to our miniprogram developers!",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -143,8 +143,8 @@
   },
   "homepage": "https://weapp-tw.icebreaker.top",
   "devDependencies": {
-    "@babel/core": "^7.22.9",
-    "@icebreakers/cli": "^0.1.1",
+    "@babel/core": "^7.22.10",
+    "@icebreakers/cli": "0.1.1",
     "@icebreakers/readme": "0.1.0",
     "@rollup/plugin-alias": "^5.0.0",
     "@rollup/plugin-commonjs": "^25.0.3",
@@ -162,9 +162,9 @@
     "@types/js-beautify": "^1.14.0",
     "@types/klaw": "^3.0.3",
     "@types/loader-utils": "^2.0.3",
-    "@types/lodash": "^4.14.196",
+    "@types/lodash": "^4.14.197",
     "@types/micromatch": "^4.0.2",
-    "@types/node": "^20.4.8",
+    "@types/node": "^20.4.9",
     "@types/semver": "^7.5.0",
     "@types/vinyl": "^2.0.7",
     "@types/webpack": "^5.28.1",
@@ -183,6 +183,7 @@
     "eslint-config-icebreaker": "^1.2.2",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "execa": "^7.2.0",
     "fast-glob": "^3.3.1",
     "fs-extra": "^11.1.1",
     "gulp": "^4.0.2",
@@ -192,7 +193,6 @@
     "js-beautify": "^1.14.9",
     "klaw": "^4.1.0",
     "lodash": "^4.17.21",
-    "magic-string": "^0.30.2",
     "mini-css-extract-plugin": "^2.7.6",
     "miniprogram-automator": "^0.12.0",
     "pkg-types": "^1.0.3",
@@ -201,7 +201,7 @@
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "prettier": "^3.0.1",
     "promisify-loader-runner": "^1.0.0",
-    "rollup": "^3.27.2",
+    "rollup": "^3.28.0",
     "rollup-plugin-visualizer": "^5.9.2",
     "style-loader": "^3.3.3",
     "tailwind-children": "^0.5.0",
@@ -214,27 +214,28 @@
     "typescript": "^5.1.6",
     "typescript-transform-paths": "^3.4.6",
     "vinyl": "^3.0.0",
-    "vite": "^4.4.8",
+    "vite": "^4.4.9",
     "vitest": "^0.34.1",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.88.2",
     "webpack-build-utils": "^0.0.4"
   },
   "dependencies": {
-    "@babel/generator": "^7.22.9",
-    "@babel/parser": "^7.22.7",
-    "@babel/traverse": "^7.22.8",
-    "@babel/types": "^7.22.5",
+    "@babel/generator": "^7.22.10",
+    "@babel/parser": "^7.22.10",
+    "@babel/traverse": "^7.22.10",
+    "@babel/types": "^7.22.10",
     "@csstools/postcss-is-pseudo-class": "^4.0.0",
+    "@tailwindcss-mangle/shared": "^2.0.4",
     "@weapp-core/escape": "^1.0.0",
     "@weapp-core/regex": "^1.0.0",
     "loader-utils": "^2.0.3",
+    "magic-string": "^0.30.2",
     "micromatch": "^4.0.5",
     "postcss": "8.4.27",
     "postcss-selector-parser": "^6.0.13",
     "semver": "^7.5.4",
-    "tailwindcss-mangle-shared": "^1.2.7",
-    "tailwindcss-patch": "^1.2.7"
+    "tailwindcss-patch": "^2.0.4"
   },
   "packageManager": "pnpm@8.6.9"
 }
