--- a/package.json
+++ b/package.json
@@ -147,7 +147,7 @@
     "@icebreakers/cli": "0.1.1",
     "@icebreakers/readme": "0.1.0",
     "@rollup/plugin-alias": "^5.0.0",
-    "@rollup/plugin-commonjs": "^25.0.3",
+    "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-terser": "^0.4.3",
@@ -164,7 +164,7 @@
     "@types/loader-utils": "^2.0.3",
     "@types/lodash": "^4.14.197",
     "@types/micromatch": "^4.0.2",
-    "@types/node": "^20.4.9",
+    "@types/node": "^20.4.10",
     "@types/semver": "^7.5.0",
     "@types/vinyl": "^2.0.7",
     "@types/webpack": "^5.28.1",
@@ -179,7 +179,7 @@
     "dedent": "^1.5.1",
     "defu": "6.1.2",
     "del": "^7.0.0",
-    "eslint": "8.46.0",
+    "eslint": "8.47.0",
     "eslint-config-icebreaker": "^1.2.2",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -226,7 +226,7 @@
     "@babel/traverse": "^7.22.10",
     "@babel/types": "^7.22.10",
     "@csstools/postcss-is-pseudo-class": "^4.0.0",
-    "@tailwindcss-mangle/shared": "^2.0.4",
+    "@tailwindcss-mangle/shared": "^2.1.0",
     "@weapp-core/escape": "^1.1.0",
     "@weapp-core/regex": "^1.0.0",
     "loader-utils": "^2.0.3",
@@ -235,9 +235,9 @@
     "postcss": "8.4.27",
     "postcss-selector-parser": "^6.0.13",
     "semver": "^7.5.4",
-    "tailwindcss-patch": "^2.0.4"
+    "tailwindcss-patch": "2.1.0"
   },
-  "packageManager": "pnpm@8.6.11",
+  "packageManager": "pnpm@8.6.12",
   "engines": {
     "node": ">=16.6.0"
   }
