--- a/package.json
+++ b/package.json
@@ -218,7 +218,8 @@
     "vitest": "^0.34.1",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.88.2",
-    "webpack-build-utils": "^0.0.4"
+    "webpack-build-utils": "^0.0.4",
+    "domhandler": "^5.0.3"
   },
   "dependencies": {
     "@babel/generator": "^7.22.10",
@@ -229,6 +230,7 @@
     "@tailwindcss-mangle/shared": "^2.1.0",
     "@weapp-core/escape": "^1.1.0",
     "@weapp-core/regex": "^1.0.0",
+    "htmlparser2": "^9.0.0",
     "loader-utils": "^2.0.3",
     "magic-string": "^0.30.2",
     "micromatch": "^4.0.5",
