chore(demo): upgarde deps

--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -1,66 +1,79 @@
 {
-  "name": "mpx-app",
+  "name": "mpx-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "mpx-cli-service serve:mp",
-    "build": "mpx-cli-service build:mp",
-    "build:local": "cross-env LOCAL=1 mpx-cli-service build:mp",
+    "serve": "mpx-cli-service serve",
+    "build": "mpx-cli-service build",
+    "test:e2e": "npx e2e-runner j---config=./jest-e2e.config.js",
     "lint": "eslint --ext .js,.ts,.mpx src/",
-    "build:web": "mpx-cli-service build:web",
-    "serve:web": "mpx-cli-service serve:web",
+    "build:e2e": "npm run build && npm run test:e2e",
+    "test": "jest test/components",
     "open": "weapp open -p dist/wx",
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@mpxjs/api-proxy": "^2.8.39",
-    "@mpxjs/core": "^2.8.39",
+    "@mpxjs/api-proxy": "^2.8.0",
+    "@mpxjs/core": "^2.8.0",
     "@mpxjs/fetch": "^2.8.0",
     "@mpxjs/pinia": "^2.8.0",
     "@mpxjs/store": "^2.8.0",
     "@mpxjs/utils": "^2.8.0",
-    "pinia": "^2.1.6",
+    "pinia": "^2.0.14",
     "vue": "^2.6.14",
-    "vue-demi": "^0.14.5",
+    "vue-demi": "^0.13.11",
     "vue-i18n": "^8.27.2",
     "vue-i18n-bridge": "^9.2.2",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.10",
-    "@babel/plugin-transform-runtime": "^7.22.10",
-    "@babel/preset-env": "^7.22.10",
-    "@babel/runtime-corejs3": "^7.22.10",
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/runtime-corejs3": "^7.10.4",
     "@mpxjs/babel-plugin-inject-page-events": "^2.8.0",
-    "@mpxjs/eslint-config-ts": "^1.0.10",
-    "@mpxjs/mpx-cli-service": "^1.6.30",
-    "@mpxjs/size-report": "^2.8.39",
-    "@mpxjs/vue-cli-plugin-mpx": "^1.6.30",
-    "@mpxjs/vue-cli-plugin-mpx-eslint": "^1.6.30",
+    "@mpxjs/eslint-config-ts": "^1.0.5",
+    "@mpxjs/miniprogram-simulate": "^1.4.17",
+    "@mpxjs/mpx-cli-service": "^2.0.0",
+    "@mpxjs/mpx-jest": "^0.0.24",
+    "@mpxjs/size-report": "^2.8.0",
+    "@mpxjs/vue-cli-plugin-mpx": "^2.0.0",
+    "@mpxjs/vue-cli-plugin-mpx-e2e-test": "^2.0.0",
+    "@mpxjs/vue-cli-plugin-mpx-eslint": "^2.0.0",
     "@mpxjs/vue-cli-plugin-mpx-mp": "^1.6.30",
-    "@mpxjs/vue-cli-plugin-mpx-typescript": "^1.6.30",
+    "@mpxjs/vue-cli-plugin-mpx-typescript": "^2.0.0",
+    "@mpxjs/vue-cli-plugin-mpx-unit-test": "^2.0.0",
     "@mpxjs/vue-cli-plugin-mpx-web": "^1.6.30",
-    "@mpxjs/webpack-plugin": "^2.8.39",
+    "@mpxjs/webpack-plugin": "^2.8.0",
+    "@types/jest": "^27.5.1",
     "@vue/cli-service": "~5.0.0",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.2.4",
+    "babel-jest": "^27.4.5",
     "cross-env": "^7.0.3",
-    "eslint": "^8.46.0",
-    "postcss": "^8.4.27",
+    "eslint": "^7.0.0",
+    "jest": "^27.4.5",
+    "postcss": "^8.2.6",
     "postcss-loader": "^7.3.3",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "postcss-rpx-transform": "^1.0.1",
     "sass": "^1.65.1",
     "sass-loader": "^13.3.2",
+    "stylus": "^0.55.0",
+    "stylus-loader": "^6.1.0",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.3.3",
-    "tailwindcss-patch": "^2.0.4",
+    "tailwindcss-patch": "^2.1.0",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "typescript": "^5.1.6",
+    "ts-jest": "^27.1.2",
+    "typescript": "^4.1.3",
     "vue-template-compiler": "^2.6.14",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.7.1",
-    "webpack": "^5.88.2"
+    "weapp-tailwindcss-webpack-plugin": "^2.8.0-beta.0",
+    "webpack": "^5.43.0"
   },
-  "browserslist": "ios >= 8, chrome >= 47"
+  "browserslist": [
+    "ios >= 8",
+    "chrome >= 47"
+  ]
 }
