--- a/demo/mpx-app/static/swan/project.swan.json
+++ b/demo/mpx-app/static/swan/project.swan.json
@@ -7,7 +7,7 @@
     "options": [],
     "selected": -3
   },
-  "projectname": "mpx-app",
+  "projectname": "mpx-project",
   "setting": {
     "urlCheck": true
   }
