--- a/package.json
+++ b/package.json
@@ -237,7 +237,7 @@
     "postcss": "8.4.27",
     "postcss-selector-parser": "^6.0.13",
     "semver": "^7.5.4",
-    "tailwindcss-patch": "2.1.0"
+    "tailwindcss-patch": "^2.1.0"
   },
   "packageManager": "pnpm@8.6.12",
   "engines": {
