--- a/package.json
+++ b/package.json
@@ -149,7 +149,7 @@
     "@rollup/plugin-alias": "^5.0.0",
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.0",
     "@rollup/plugin-terser": "^0.4.3",
     "@rollup/plugin-typescript": "^11.1.2",
     "@tsconfig/recommended": "^1.0.2",
@@ -164,12 +164,12 @@
     "@types/loader-utils": "^2.0.3",
     "@types/lodash": "^4.14.197",
     "@types/micromatch": "^4.0.2",
-    "@types/node": "^20.5.0",
+    "@types/node": "^20.5.1",
     "@types/semver": "^7.5.0",
     "@types/vinyl": "^2.0.7",
     "@types/webpack": "^5.28.1",
     "@types/webpack-sources": "^3.2.0",
-    "@vitest/coverage-v8": "^0.34.1",
+    "@vitest/coverage-v8": "^0.34.2",
     "autoprefixer": "^10.4.15",
     "babel-loader": "^9.1.3",
     "bumpp": "^9.1.1",
@@ -179,6 +179,7 @@
     "dedent": "^1.5.1",
     "defu": "6.1.2",
     "del": "^7.0.0",
+    "domhandler": "^5.0.3",
     "eslint": "8.47.0",
     "eslint-config-icebreaker": "^1.2.2",
     "eslint-config-prettier": "^9.0.0",
@@ -199,7 +200,7 @@
     "postcss-load-config": "^4.0.1",
     "postcss-loader": "^7.3.3",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
-    "prettier": "^3.0.1",
+    "prettier": "^3.0.2",
     "promisify-loader-runner": "^1.0.0",
     "rollup": "^3.28.0",
     "rollup-plugin-visualizer": "^5.9.2",
@@ -210,16 +211,15 @@
     "ts-node": "^10.9.1",
     "ts-patch": "^3.0.2",
     "tsd": "^0.28.1",
-    "tslib": "^2.6.1",
+    "tslib": "^2.6.2",
     "typescript": "^5.1.6",
     "typescript-transform-paths": "^3.4.6",
     "vinyl": "^3.0.0",
     "vite": "^4.4.9",
-    "vitest": "^0.34.1",
+    "vitest": "^0.34.2",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.88.2",
-    "webpack-build-utils": "^0.0.4",
-    "domhandler": "^5.0.3"
+    "webpack-build-utils": "^0.0.4"
   },
   "dependencies": {
     "@babel/generator": "^7.22.10",
@@ -234,10 +234,10 @@
     "loader-utils": "^2.0.3",
     "magic-string": "^0.30.2",
     "micromatch": "^4.0.5",
-    "postcss": "8.4.27",
+    "postcss": "8.4.28",
     "postcss-selector-parser": "^6.0.13",
     "semver": "^7.5.4",
-    "tailwindcss-patch": "^2.1.0"
+    "tailwindcss-patch": "^2.1.1"
   },
   "packageManager": "pnpm@8.6.12",
   "engines": {
