--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -84,7 +84,7 @@
     "typescript": "~5.1.6",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.8.1-beta.0",
+    "weapp-tailwindcss-webpack-plugin": "^2.8.1",
     "webpack": "^5.88.2",
     "webpack-chain": "^6.5.1"
   },
