--- a/package.json
+++ b/package.json
@@ -143,7 +143,7 @@
   },
   "homepage": "https://weapp-tw.icebreaker.top",
   "devDependencies": {
-    "@babel/core": "^7.22.10",
+    "@babel/core": "^7.22.11",
     "@icebreakers/cli": "0.1.1",
     "@icebreakers/readme": "0.1.0",
     "@rollup/plugin-alias": "^5.0.0",
@@ -151,10 +151,11 @@
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-terser": "^0.4.3",
-    "@rollup/plugin-typescript": "^11.1.2",
+    "@rollup/plugin-typescript": "^11.1.3",
     "@tsconfig/recommended": "^1.0.2",
     "@types/babel__generator": "^7.6.4",
     "@types/babel__traverse": "^7.20.1",
+    "@types/diff": "^5.0.3",
     "@types/fs-extra": "^11.0.1",
     "@types/gulp": "^4.0.13",
     "@types/gulp-postcss": "^8.0.3",
@@ -164,12 +165,12 @@
     "@types/loader-utils": "^2.0.3",
     "@types/lodash": "^4.14.197",
     "@types/micromatch": "^4.0.2",
-    "@types/node": "^20.5.3",
+    "@types/node": "^20.5.6",
     "@types/semver": "^7.5.0",
     "@types/vinyl": "^2.0.7",
     "@types/webpack": "^5.28.2",
     "@types/webpack-sources": "^3.2.0",
-    "@vitest/coverage-v8": "^0.34.2",
+    "@vitest/coverage-v8": "^0.34.3",
     "autoprefixer": "^10.4.15",
     "babel-loader": "^9.1.3",
     "bumpp": "^9.2.0",
@@ -179,8 +180,9 @@
     "dedent": "^1.5.1",
     "defu": "6.1.2",
     "del": "^7.0.0",
+    "diff": "^5.1.0",
     "domhandler": "^5.0.3",
-    "eslint": "8.47.0",
+    "eslint": "8.48.0",
     "eslint-config-icebreaker": "^1.2.2",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -190,7 +192,7 @@
     "gulp": "^4.0.2",
     "gulp-postcss": "^9.0.1",
     "html-loader": "^4.2.0",
-    "jest": "^29.6.3",
+    "jest": "^29.6.4",
     "js-beautify": "^1.14.9",
     "klaw": "^4.1.0",
     "lodash": "^4.17.21",
@@ -212,20 +214,20 @@
     "ts-patch": "^3.0.2",
     "tsd": "^0.28.1",
     "tslib": "^2.6.2",
-    "typescript": "^5.1.6",
+    "typescript": "^5.2.2",
     "typescript-transform-paths": "^3.4.6",
     "vinyl": "^3.0.0",
     "vite": "^4.4.9",
-    "vitest": "^0.34.2",
+    "vitest": "^0.34.3",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.88.2",
     "webpack-build-utils": "^0.0.4"
   },
   "dependencies": {
     "@babel/generator": "^7.22.10",
-    "@babel/parser": "^7.22.10",
-    "@babel/traverse": "^7.22.10",
-    "@babel/types": "^7.22.10",
+    "@babel/parser": "^7.22.11",
+    "@babel/traverse": "^7.22.11",
+    "@babel/types": "^7.22.11",
     "@csstools/postcss-is-pseudo-class": "^4.0.0",
     "@tailwindcss-mangle/shared": "^2.1.0",
     "@weapp-core/escape": "^1.1.0",
