Fix/source map (#233)
* feat: try overwrite source map

* feat: try to adapt daisyui

* docs: add uni-app android css rgb fn issue

* chore(demo): upgrade deps

* chore(deps): upgrade

* feat: enhance postcss plugin

* refactor: js and postcss

* chore(deps): @weapp-core

* chore(deps): upgrade

* chore: release v2.8.2

* chore(demo): upgrade deps

--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -51,26 +51,26 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "2.0.2-3080720230703001",
-    "@dcloudio/uni-app-plus": "2.0.2-3080720230703001",
-    "@dcloudio/uni-h5": "2.0.2-3080720230703001",
+    "@dcloudio/uni-app": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-app-plus": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-h5": "2.0.2-alpha-3081220230802001",
     "@dcloudio/uni-helper-json": "*",
-    "@dcloudio/uni-i18n": "2.0.2-3080720230703001",
-    "@dcloudio/uni-mp-360": "2.0.2-3080720230703001",
-    "@dcloudio/uni-mp-alipay": "2.0.2-3080720230703001",
-    "@dcloudio/uni-mp-baidu": "2.0.2-3080720230703001",
-    "@dcloudio/uni-mp-jd": "2.0.2-3080720230703001",
-    "@dcloudio/uni-mp-kuaishou": "2.0.2-3080720230703001",
-    "@dcloudio/uni-mp-lark": "2.0.2-3080720230703001",
-    "@dcloudio/uni-mp-qq": "2.0.2-3080720230703001",
-    "@dcloudio/uni-mp-toutiao": "2.0.2-3080720230703001",
-    "@dcloudio/uni-mp-vue": "2.0.2-3080720230703001",
-    "@dcloudio/uni-mp-weixin": "2.0.2-3080720230703001",
-    "@dcloudio/uni-mp-xhs": "2.0.2-3080720230703001",
-    "@dcloudio/uni-quickapp-native": "2.0.2-3080720230703001",
-    "@dcloudio/uni-quickapp-webview": "2.0.2-3080720230703001",
-    "@dcloudio/uni-stacktracey": "2.0.2-3080720230703001",
-    "@dcloudio/uni-stat": "2.0.2-3080720230703001",
+    "@dcloudio/uni-i18n": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-mp-360": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-mp-alipay": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-mp-baidu": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-mp-jd": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-mp-kuaishou": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-mp-lark": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-mp-qq": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-mp-toutiao": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-mp-vue": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-mp-weixin": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-mp-xhs": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-quickapp-native": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-quickapp-webview": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-stacktracey": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-stat": "2.0.2-alpha-3081220230802001",
     "@vant/weapp": "^1.10.23",
     "@vue/shared": "^3.0.0",
     "core-js": "^3.32.0",
@@ -84,16 +84,16 @@
     "@babel/plugin-syntax-typescript": "^7.22.5",
     "@babel/runtime": "~7.22.10",
     "@dcloudio/types": "3.3.3",
-    "@dcloudio/uni-automator": "2.0.2-3080720230703001",
-    "@dcloudio/uni-cli-i18n": "2.0.2-3080720230703001",
-    "@dcloudio/uni-cli-shared": "2.0.2-3080720230703001",
-    "@dcloudio/uni-migration": "2.0.2-3080720230703001",
-    "@dcloudio/uni-template-compiler": "2.0.2-3080720230703001",
-    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-3080720230703001",
-    "@dcloudio/vue-cli-plugin-uni": "2.0.2-3080720230703001",
-    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-3080720230703001",
-    "@dcloudio/webpack-uni-mp-loader": "2.0.2-3080720230703001",
-    "@dcloudio/webpack-uni-pages-loader": "2.0.2-3080720230703001",
+    "@dcloudio/uni-automator": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-cli-i18n": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-cli-shared": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-migration": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/uni-template-compiler": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/vue-cli-plugin-uni": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/webpack-uni-mp-loader": "2.0.2-alpha-3081220230802001",
+    "@dcloudio/webpack-uni-pages-loader": "2.0.2-alpha-3081220230802001",
     "@egoist/tailwindcss-icons": "^1.1.0",
     "@iconify-json/mdi": "^1.1.54",
     "@vue/cli-plugin-babel": "~5.0.8",
@@ -120,7 +120,7 @@
     "vue-template-compiler": "^2.6.11",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.8.1"
+    "weapp-tailwindcss-webpack-plugin": "^2.8.2"
   },
   "browserslist": [
     "Android >= 4.4",
