fix: #228 add virtualHostClass support

--- a/demo/uni-app-vue3-vite/src/manifest.json
+++ b/demo/uni-app-vue3-vite/src/manifest.json
@@ -55,7 +55,8 @@
       "urlCheck": false
     },
     "usingComponents": true,
-    "darkmode": true
+    "darkmode": true,
+    "mergeVirtualHostAttributes": true
   },
   "mp-alipay": {
     "usingComponents": true
