--- a/demo-linked/.npmrc
+++ b/demo-linked/.npmrc
@@ -3,3 +3,5 @@ msvs_version=2017
 git-checks=false
 puppeteer_download_host=https://npmmirror.com/mirrors/
 shamefully-hoist=true
+hoist-pattern[]=!tailwindcss
+public-hoist-pattern[]=!tailwindcss
