--- a/demo-linked/taro-app-react/package.json
+++ b/demo-linked/taro-app-react/package.json
@@ -5,7 +5,7 @@
   "description": "ge",
   "scripts": {
     "dev": "cross-env DEBUG=weapp-tw npm run dev:weapp",
-    "dev:local": "cross-env LOCAL=1 WRITE=1 npm run dev:weapp",
+    "dev:local": "npm run dev:weapp",
     "dev:write": "cross-env WRITE=1 npm run dev:weapp",
     "build": "cross-env DEBUG=weapp-tw npm run build:weapp",
     "build:local": "cross-env LOCAL=1 npm run build:weapp",
@@ -38,37 +38,37 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.22.11",
-    "@tarojs/components": "3.6.14",
-    "@tarojs/react": "3.6.14",
-    "@tarojs/runtime": "3.6.14",
-    "@tarojs/taro": "3.6.14",
+    "@tarojs/components": "3.6.16",
+    "@tarojs/react": "3.6.16",
+    "@tarojs/runtime": "3.6.16",
+    "@tarojs/taro": "3.6.16",
     "antd-mobile": "^5.32.1",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "taro-hooks": "2.0.5"
+    "taro-hooks": "2.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
-    "@tarojs/cli": "3.6.14",
-    "@tarojs/mini-runner": "3.6.14",
+    "@tarojs/cli": "3.6.16",
+    "@tarojs/mini-runner": "3.6.16",
     "@tarojs/plugin-framework-react": "^3.6.14",
     "@tarojs/plugin-platform-h5": "^3.6.14",
-    "@tarojs/webpack-runner": "3.6.14",
-    "@tarojs/webpack5-runner": "3.6.14",
+    "@tarojs/webpack-runner": "3.6.16",
+    "@tarojs/webpack5-runner": "3.6.16",
     "@types/react": "^18.2.21",
     "@types/webpack-env": "^1.18.1",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
     "autoprefixer": "^10.4.15",
     "babel-plugin-import": "^1.13.8",
-    "babel-preset-taro": "3.6.14",
+    "babel-preset-taro": "3.6.16",
     "create-functional-loader": "^0.1.0",
     "cross-env": "^7.0.3",
     "daisyui": "^3.6.3",
     "eslint": "^8.48.0",
-    "eslint-config-taro": "3.6.14",
+    "eslint-config-taro": "3.6.16",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.2.0",
@@ -84,6 +84,7 @@
     "terser-webpack-plugin": "^5.3.9",
     "typescript": "~5.2.2",
     "weapp-ide-cli": "^1.0.1",
+    "weapp-tailwindcss": "^2.8.4",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.88.2",
     "webpack-chain": "^6.5.1"
