--- a/demo-linked/uni-app-webpack5/package.json
+++ b/demo-linked/uni-app-webpack5/package.json
@@ -101,10 +101,10 @@
     "@vue/cli-service": "~5.0.0",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
-    "jest": "^25.4.0",
+    "jest": "^29.7.0",
     "mini-css-extract-plugin": "^2.7.6",
     "mini-types": "*",
-    "miniprogram-api-typings": "3.11.0",
+    "miniprogram-api-typings": "3.12.0",
     "postcss-comment": "^2.0.0",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "postcss-rpx-transform": "^1.0.1",
@@ -114,9 +114,10 @@
     "tailwindcss": "^3.3.3",
     "tailwindcss-patch": "^2.1.1",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "typescript": "~4.9.5",
+    "typescript": "~5.2.2",
     "vue-template-compiler": ">= 2.6.14 < 2.7",
     "weapp-ide-cli": "^1.0.1",
+    "weapp-tailwindcss": "^2.8.4",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "browserslist": [
