--- a/package.json
+++ b/package.json
@@ -237,12 +237,12 @@
     "debug": "^4.3.4",
     "htmlparser2": "^9.0.0",
     "loader-utils": "^2.0.3",
+    "lru-cache": "^10.0.1",
     "magic-string": "^0.30.3",
     "micromatch": "^4.0.5",
     "postcss": "8.4.29",
     "postcss-selector-parser": "^6.0.13",
     "semver": "^7.5.4",
-    "supports-color": "^9.4.0",
     "tailwindcss-patch": "^2.2.1"
   },
   "packageManager": "pnpm@8.6.12",
