--- a/demo-linked/taro-app-react/package.json
+++ b/demo-linked/taro-app-react/package.json
@@ -79,13 +79,13 @@
     "stylelint": "15.10.3",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.3.3",
-    "tailwindcss-patch": "^2.1.1",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "terser-webpack-plugin": "^5.3.9",
     "typescript": "~5.2.2",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss": "^2.8.4",
     "weapp-tailwindcss-children": "^0.1.0",
+    "weapp-tailwindcss-webpack-plugin": "link:../..",
     "webpack": "^5.88.2",
     "webpack-chain": "^6.5.1"
   },
